Don't copy empty exporteddata information file

BUG: 429895